<resources>
    <string name="app_name">AI 스케줄러</string>
    <string name="title_home">홈</string>
    <string name="title_calendar">캘린더</string>
    <string name="title_explore">탐색</string>
    <string name="search">검색</string>
    <string name="memo">메모</string>
    <string name="name">이름</string>
    <string name="save">저장</string>
    <string name="allday">종일</string>
    <string name="place">장소</string>
    <string name="select_place">장소 선택</string>
    <string name="car">자동차</string>
    <string name="transit">대중교통</string>
    <string name="optimal">최적</string>
    <string name="go_out_route">외출 경로</string>
    <string name="return_route">귀가 경로</string>
    <string name="edit">수정</string>
    <string name="delete">삭제</string>
    <string name="destination">목적지</string>
    <string name="origin">출발지</string>
    <string name="immediate_schedules">가까운 일정</string>
    <string name="current_weather">현재 날씨</string>
    <string name="create_schedule">일정 추가</string>
    <string name="route_details">경로 상세 정보</string>
    <string name="restaurant">음식점</string>
    <string name="hotel">숙박</string>
    <string name="tour">관광지</string>
    <string name="cafe">카페</string>
    <string name="parking">주차장</string>
    <string name="gas_station">주유소</string>
    <string name="pharmacy">약국</string>
    <string name="hospital">병원</string>
    <string name="bank">은행</string>
    <string name="today_schedules">오늘의 일정</string>
</resources>