<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/restaurant_chip"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/restaurant"
            app:chipIcon="@drawable/ic_round_restaurant"
            app:chipIconVisible="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/tour_chip"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tour"
            android:visibility="gone"
            app:chipIcon="@drawable/ic_round_local_see"
            app:chipIconVisible="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/hotel_chip"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hotel"
            android:visibility="gone"
            app:chipIcon="@drawable/ic_round_hotel"
            app:chipIconVisible="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/cafe_chip"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cafe"
            android:visibility="gone"
            app:chipIcon="@drawable/ic_round_local_cafe"
            app:chipIconVisible="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/bank_chip"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bank"
            android:visibility="gone"
            app:chipIcon="@drawable/ic_round_local_atm"
            app:chipIconVisible="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/hospital_chip"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hospital"
            android:visibility="gone"
            app:chipIcon="@drawable/ic_round_local_hospital"
            app:chipIconVisible="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/pharmacy_chip"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pharmacy"
            android:visibility="gone"
            app:chipIcon="@drawable/ic_round_local_pharmacy"
            app:chipIconVisible="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/parking_chip"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parking"
            android:visibility="gone"
            app:chipIcon="@drawable/ic_round_local_parking"
            app:chipIconVisible="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/gas_station_chip"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gas_station"
            android:visibility="gone"
            app:chipIcon="@drawable/ic_round_local_gas_station"
            app:chipIconVisible="true" />

    </com.google.android.material.chip.ChipGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chips"
        tools:listitem="@layout/nearby_place_item" />

</androidx.constraintlayout.widget.ConstraintLayout>