<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/course_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.calendar.ScheduleFormFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_round_arrow_back" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginHorizontal="24dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/name_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_round_calendar_today"
            tools:ignore="VectorDrawableCompat" />

        <EditText
            android:id="@+id/name_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:background="@android:color/transparent"
            android:hint="@string/name"
            android:text=""
            android:textAppearance="?attr/textAppearanceBody1" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#1F000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginHorizontal="24dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/time_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_round_schedule"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:id="@+id/allday_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:background="@android:color/transparent"
            android:text="@string/allday"
            android:textAppearance="?attr/textAppearanceBody1" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/allday_switch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom|right"
            android:checked="false" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginLeft="72dp"
        android:layout_marginRight="24dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/start_date_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:textAppearance="?attr/textAppearanceBody1"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/start_time_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:textAppearance="?attr/textAppearanceBody1"
            app:layout_constraintRight_toRightOf="parent"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/end_layout"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginLeft="72dp"
        android:layout_marginRight="24dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/end_date_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:textAppearance="?attr/textAppearanceBody1"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/end_time_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:textAppearance="?attr/textAppearanceBody1"
            app:layout_constraintRight_toRightOf="parent"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#1F000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginHorizontal="24dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/place_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_round_location"
            tools:ignore="VectorDrawableCompat" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp">

            <TextView
                android:id="@+id/place_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:text="@string/place"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="#99000000"
                app:layout_constraintEnd_toStartOf="@id/remove_place_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/remove_place_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_round_remove_circle"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/place_text"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#1F000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginHorizontal="24dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/transit_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_round_directions"
            tools:ignore="VectorDrawableCompat" />

        <com.google.android.material.chip.ChipGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/car_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/car"
                app:chipIcon="@drawable/ic_round_directions_car"
                app:chipIconVisible="true" />

            <com.google.android.material.chip.Chip
                android:id="@+id/transit_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:checked="true"
                android:text="@string/transit"
                app:chipIcon="@drawable/ic_round_directions_bus"
                app:chipIconVisible="true" />

        </com.google.android.material.chip.ChipGroup>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#1F000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginHorizontal="24dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/memo_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_round_notes"
            tools:ignore="VectorDrawableCompat" />

        <EditText
            android:id="@+id/memo_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:background="@android:color/transparent"
            android:hint="@string/memo"
            android:text=""
            android:textAppearance="?attr/textAppearanceBody1" />

    </LinearLayout>

</LinearLayout>